[package]

name = "Bulls & Cows in reverse"
version = "0.0.3"
authors = [ "Your name <you@example.com>" ]

[[bin]]

name = "bcr"

[dependencies]
toml = "0.1"
rustc-serialize = "*"
term-painter = "*"

[dependencies.kiss-ui]
git = "https://github.com/cybergeek94/kiss-ui"

[dependencies.current]
# git = "https://github.com/pistondevelopers/current"
git = "https://github.com/Andi-K/current.git"
